@@ -7,6 +7,7 @@ CHANGES
 
 - We need to allow id cells to be numeric again on import (https://launchpad.net/bugs/1035036)
 - Cannot import data file (https://launchpad.net/bugs/1035969)
+- Importer needs to give error when cell A is empty too soon (https://launchpad.net/bugs/1035088)
 
 
 2.2.0 (2012-08-07)
